--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -103,7 +103,6 @@ $screen-lg-max: 1199px;
       font-size: 55px;
       line-height: 60px;
       text-align: center;
-      margin-bottom: 16px;
     }
     &_subtitle {
       font-style: normal;
@@ -146,6 +145,13 @@ $screen-lg-max: 1199px;
       }
     }
   }
+  @media (min-width: $screen-lg) {
+    &_content {
+      &_title {
+        margin-bottom: 22px;
+      }
+    }
+  }
   @media (max-width: $screen-md-max) {
     &_content {
       &_form {
@@ -154,9 +160,6 @@ $screen-lg-max: 1199px;
         &_input {
           margin-bottom: 10px;
         }
-      }
-      &_subtitle {
-        margin-bottom: 22px;
       }
     }
   }
